fixed image wrap on small screen - add fixed position on the footer - other little things fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,11 +24,15 @@ body {
     margin: auto;
 }
 
+#wrapper{
+    height: 100vh;
+}
+
 /*Header things*/
 nav {
     display: flex;
     justify-content: end;
-    height: 100%;
+    height: 20px;
     gap: 5px;
     align-items: center;
 }
@@ -48,8 +52,11 @@ nav {
 
 /*Main things*/
 #site_main {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 2%;
+    padding-bottom: 4%;
+    max-height: calc(100vh-100px);
+    overflow-y: auto;
+    position: relative;
 }
 
 /*row used for contain 7 column then ->Wrap*/
@@ -57,14 +64,12 @@ nav {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-left: -1rem;
-    margin-right: -1rem;
-
 }
 
 /*Split row in 7*/
 .col_7 {
-    width: calc((100% / 12)*(12/7));
+  /*  width: calc((100% / 12)*(12/7));*/
+    width: 140px;
     padding: 0.25rem;
     padding-left: 0.1em;
     padding-bottom: 0.1rem;
@@ -95,7 +100,11 @@ nav {
 /*Change background*/
 #site_footer {
     background-color: #222222;
-
+    height: 50px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer_container {
